added body outline

--- a/index.css
+++ b/index.css
@@ -1,2 +1,2 @@
-body{background-color:#dddddd}.table{border-collapse:inherit;border-spacing:0.1em;padding:.5em;border:none}.bg-primary-lighter{background-color:#598cfd}.bg-primary-lighter2{background-color:#79a2fc}.light-blue{background-color:#bed6ff}h1{font-size:2rem;margin:3rem 0 1rem 4rem}.card{width:50%}
+body{background-color:#dddddd}body .outline-mode *{outline:1px solid #000}.table{border-collapse:inherit;border-spacing:0.1em;padding:.5em;border:none}.bg-primary-lighter{background-color:#598cfd}.bg-primary-lighter2{background-color:#79a2fc}.light-blue{background-color:#bed6ff}h1{font-size:2rem;margin:3rem 0 1rem 4rem}.card{width:50%}
 /*# sourceMappingURL=index.css.map */
